2011-11-21  Filip Pizlo  <fpizlo@apple.com>
        
        Another attempt at a build fix.

        * dfg/DFGRepatch.h:
        (JSC::DFG::dfgResetGetByID):
        (JSC::DFG::dfgResetPutByID):

2011-11-20  Filip Pizlo  <fpizlo@apple.com>

        Unreviewed interpreter build fix.

        * bytecode/CodeBlock.cpp:
        (JSC::CodeBlock::finalizeUnconditionally):
        * dfg/DFGRepatch.h:

2011-11-20  Yuqiang Xian  <yuqiang.xian@intel.com>

        Improve modulo operation on 32bit platforms
        https://bugs.webkit.org/show_bug.cgi?id=72501

        Reviewed by Filip Pizlo.

        Extend softModulo to support X86 and MIPS in baseline JIT.
        Apply the same optimization to 32bit DFG JIT.
        1% gain on Kraken, tested on Linux Core i7 Nehalem 32bit.

        * dfg/DFGSpeculativeJIT.h:
        * dfg/DFGSpeculativeJIT32_64.cpp:
        (JSC::DFG::SpeculativeJIT::compileSoftModulo):
        (JSC::DFG::SpeculativeJIT::compile):
        * jit/JITArithmetic32_64.cpp:
        (JSC::JIT::emit_op_mod):
        (JSC::JIT::emitSlow_op_mod):
        * jit/JITOpcodes32_64.cpp:
        (JSC::JIT::softModulo):
        * wtf/Platform.h:

2011-11-18  Filip Pizlo  <fpizlo@apple.com>

        Inline caches that refer to otherwise dead objects should be cleared
        https://bugs.webkit.org/show_bug.cgi?id=72311

        Reviewed by Geoff Garen.

        DFG code blocks now participate in the weak reference harvester fixpoint
        so that they only consider themselves to be live if either they are
        currently executing, or their owner is live and all of their weak references
        are live. If not, the relevant code blocks are jettisoned.

        Inline caches in both the old JIT and the DFG are now cleared if any of
        their references are not marked at the end of a GC.

        This is performance-neutral on SunSpider, V8, and Kraken. With the clear-
        all-code-on-GC policy that we currently have, it shows a slight reduction