@@ -1,0 +1,15 @@
+;; Per-directory local variables for GNU Emacs 23 and later.
+
+;; Syntax: ((MODE (VAR . VAL) ...) ...)
+;; MODE is a symbol like `c-mode', or `nil' for all modes.
+((nil
+  (indent-tabs-mode . nil)
+  (c-basic-offset . 4))
+ (c-mode
+  (indent-tabs-mode . nil)
+  (c-basic-offset . 4))
+ (c++-mode
+  (indent-tabs-mode . nil)
+  (c-basic-offset . 4))
+ (change-log-mode
+  (indent-tabs-mode . nil)))
